--- a/templates/01_begruesung.html
+++ b/templates/01_begruesung.html
@@ -4,15 +4,22 @@
 <h1>Allgemeine Unterweisung: ARBEITSSICHERHEIT</h1>
 
 <div class="box">
-Bevor du deine Tätigkeit aufnimmst, brauchst du…<br><br>
+  <p>Zum Abschluss der Sicherheitsunterweisung erfolgt ein kurzes Quiz, um das Verständnis der vermittelten Inhalte zu dokumentieren. </p>
+  <p>Bitte schenken Sie den Informationen daher Ihre volle Aufmerksamkeit.</p>
+  <p>&nbsp;</p>
+  <p>Bevor du deine Tätigkeit aufnimmst, brauchst du…<br>
+    <br>
 
-…eine allgemeine Sicherheitsunterweisung.<br><br>
+…eine allgemeine Sicherheitsunterweisung.<br>
+<br>
 
 Die allgemeine Sicherheitsunterweisung dient dazu, dich mit den Schutz- und 
-Sicherheitsregeln vertraut zu machen, die du beachten musst, wenn du bei Landal arbeitest.<br><br>
+Sicherheitsregeln vertraut zu machen, die du beachten musst, wenn du bei Landal arbeitest.<br>
+<br>
 
 Die vorliegende Präsentation ist die allgemeine Sicherheitsunterweisung. Bitte lies sie 
 aufmerksam durch.
+  </p>
 </div>
 <div class="nav">
     <a href="/unterweisung/2">Weiter</a>
