--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h1>Allgemeine Sicherheitsunterweisung 2026</h1>
 
 <form method="post">
-    <b>Name *</b><br>
+    <b>Vorname & Name *</b><br>
     <input type="text" name="name" required><br>
 
     <b>Abteilung *</b><br>
